objects/Forecasting_Invoicing_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>BS_Category__c</fullName>
        <label>B/S Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Month_0__c</fullName>
        <label>Booking Month</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_Month_1__c</fullName>
        <label>Booking Month +1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Booking_Month_2__c</fullName>
        <label>Booking Month +2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Forecasting Invoicing Schedule</label>
</CustomObject>